--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 argon2-cffi==20.1.0
-asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+asgiref 
 bcrypt==3.2.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-Django @ file:///tmp/build/80754af9/django_1617740316746/work
+Django 
 django-bootstrap3==15.0.0
 django-bootstrap4==3.0.1
 django-braces==1.14.0
@@ -22,16 +22,16 @@ lxml==4.6.3
 misaka==2.1.1
 numpy==1.20.3
 Pillow==8.2.0
-psycopg2 @ file:///opt/concourse/worker/volumes/live/7541fe58-2a45-4073-5d69-313e733fc729/volume/psycopg2_1612298592535/work
+psycopg2 
 pycparser==2.20
 PyJWT==2.1.0
 python-dateutil==2.8.1
 python-dotenv==0.17.1
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pytz 
 requests==2.25.1
 simplejson==3.17.2
 six==1.15.0
 soupsieve==2.2.1
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse 
 text-unidecode==1.3
 urllib3==1.26.4
