--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-aniso8601==8.1.1
+aniso8601==7.0.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
 asgiref 
+attrs==21.2.0
 autopep8==1.5.7
 bcrypt==3.2.0
+beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+coverage==5.5
 distlib==0.3.2
 Django 
 django-bootstrap3==15.0.0
@@ -15,20 +19,39 @@ django-braces==1.14.0
 django-cors-headers==3.7.0
 django-debug-toolbar==3.2.1
 django-environ==0.4.5
-django-graphql-jwt==0.3.2
+django-filter==2.4.0
+django-graph-auth==0.3.1
+django-graphql-auth==0.3.16
+django-graphql-jwt==0.3.0
+django-rest-auth==0.9.5
+djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
+Faker==8.1.0
 filelock==3.0.12
-graphene==3.0b7
-graphene-django==3.0.0b7
-graphql-core==3.1.5
-graphql-relay==3.1.0
+graphene==2.1.8
+graphene-django==2.15.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+humanize==3.5.0
 idna==2.10
+iniconfig==1.1.1
 lxml==4.6.3
+misaka==2.1.1
+mixer==7.1.2
+numpy==1.20.3
+packaging==20.9
 Pillow==8.2.0
+pluggy==0.13.1
 promise==2.3
 psycopg2 
+py==1.10.0
 pycodestyle==2.7.0
 pycparser==2.20
-PyJWT==2.1.0
+PyJWT==1.7.1
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-cov==2.12.1
+pytest-django==4.4.0
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz 
