--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 aniso8601==7.0.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
-asgiref 
+asgiref
+astroid==2.5.6
 attrs==21.2.0
 autopep8==1.5.7
 bcrypt==3.2.0
@@ -12,7 +13,7 @@ cffi==1.14.5
 chardet==4.0.0
 coverage==5.5
 distlib==0.3.2
-Django 
+Django
 django-bootstrap3==15.0.0
 django-bootstrap4==3.0.1
 django-braces==1.14.0
@@ -26,16 +27,20 @@ django-graphql-jwt==0.3.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
-Faker==8.1.0
 filelock==3.0.12
 graphene==2.1.8
 graphene-django==2.15.0
+graphene-django-optimizer==0.8.0
+graphene-file-upload==1.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 humanize==3.5.0
 idna==2.10
 iniconfig==1.1.1
+isort==5.8.0
+lazy-object-proxy==1.6.0
 lxml==4.6.3
+mccabe==0.6.1
 misaka==2.1.1
 mixer==7.1.2
 numpy==1.20.3
@@ -43,7 +48,7 @@ packaging==20.9
 Pillow==8.2.0
 pluggy==0.13.1
 promise==2.3
-psycopg2 
+psycopg2
 py==1.10.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -54,16 +59,18 @@ pytest-cov==2.12.1
 pytest-django==4.4.0
 python-dateutil==2.8.1
 python-dotenv==0.17.1
-pytz 
+pytz
 requests==2.25.1
 Rx==1.6.1
+sentry-sdk==1.1.0
 simplejson==3.17.2
 singledispatch==3.6.2
 six==1.15.0
 soupsieve==2.2.1
-sqlparse 
+sqlparse
 text-unidecode==1.3
 toml==0.10.2
 urllib3==1.26.4
 virtualenv==20.4.7
 virtualenv-clone==0.5.4
+wrapt==1.12.1
