--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = checkBalance.settings
-addopts = --cov --cov-report=html
+addopts = --cov --cov-report=html -p no:warnings
