--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .env
-.migrations
+**/migrations/**
+budget/migrations/0001_initial.py
+users/migrations/0001_initial.py
 .static
 db.sqlite3
 /db.sqlite3
 /manage.py
-balance/settings.py
+checkBalance/settings.py
 settings.py
 .vscode/settings.json
 .vscode
