--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aniso8601==7.0.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
-asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+asgiref
 astroid==2.5.6
 attrs==21.2.0
 autopep8==1.5.7
@@ -13,7 +13,7 @@ cffi==1.14.5
 chardet==4.0.0
 coverage==5.5
 distlib==0.3.2
-Django @ file:///tmp/build/80754af9/django_1617740316746/work
+Django
 django-bootstrap3==15.0.0
 django-bootstrap4==3.0.1
 django-braces==1.14.0
@@ -54,7 +54,6 @@ packaging==20.9
 Pillow==8.2.0
 pluggy==0.13.1
 promise==2.3
-psycopg2 @ file:///opt/concourse/worker/volumes/live/7541fe58-2a45-4073-5d69-313e733fc729/volume/psycopg2_1612298592535/work
 py==1.10.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -66,7 +65,7 @@ pytest-cov==2.12.1
 pytest-django==4.4.0
 python-dateutil==2.8.1
 python-dotenv==0.17.1
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pytz
 requests==2.25.1
 Rx==1.6.1
 sentry-sdk==1.1.0
@@ -74,7 +73,7 @@ simplejson==3.17.2
 singledispatch==3.6.2
 six==1.15.0
 soupsieve==2.2.1
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse
 text-unidecode==1.3
 toml==0.10.2
 urllib3==1.26.4
